--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,3 +11,5 @@ All stat affixes are now applied simultaneously per player.
 Reduced chance for lifesteal to roll.
 Reduced max lifesteal value from 20% to 10%.
 Added melee lifesteal prefix.
+Bosses always drop fragments.
+Bosses drop x10 more fragments than normal enemies.
