--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,5 @@
+v0.3.1
+Fixed modifier forge being able to forge when the fragments are not in the forge.
 Fixed PVP debuffs not applying correctly.
 
 v0.3.0
