--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+v0.3.2
+Fixed a crash when rolling T3 Accessory Consume Ammo affix.
+
 v0.3.1
 Fixed modifier forge being able to forge when the fragments are not in the forge.
 Fixed PVP debuffs not applying correctly.
