--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+v0.4.1
+Internal bugfix update for example mod extension.
+
 v0.4.0
 Certain forge actions are now gated behind boss kills.
 Added a close button to the forge UI.
