--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,7 @@
+v0.5.0
 Fragments are now sold by the Wizard instead of crafted. The price is unchanged.
 Added weapon Fire Nova on hit suffix.
-Added weapon Force Wave on hit suffix.
+Added weapon Force Wave on melee hit suffix.
 Added weapon Frost Spikes on kill suffix.
 Both lifesteal prefixes reduced to 0-2%
 
