--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,6 @@
 v0.5.1
 Fixed minion damage multipliers not applying.
+Removed affix counts from the item name.
 
 v0.5.0
 Fragments are now sold by the Wizard instead of crafted. The price is unchanged.
