--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+v0.6.2
+Fixed Eternia Crystal getting hit by some modifiers.
+
 v0.6.1
 Added visuals for ailment buffs.
 Fixed Old One's Army's Portal getting destroyed by some modifiers.
